--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hank Quinlan, Horrible Cop</title>
+    <title>Harshil Kamdar</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   
@@ -36,4 +36,3 @@
   </body>
 
 </html>
-
