--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <div class="container">
 
       <div class="blurb">
-      <h1>Hi there, I'm Hank Quinlan!</h1>
-      <p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+      <p>This is still kinda under construction. </p>
     </div> 
 
 
@@ -29,8 +28,8 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="mailto:hkamdar2@illinois.edu">email</a></li>
+   <li><a href="https://github.com/harshilkamdar">github.com/harshilkamdar</a></li>
    </ul>
   </footer>
   </body>
