--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <li><a href="/blog">Blog</a></li>
 </ul>
     </nav>
+
+<img id="frontPhoto" src="a.jpg"> 
+
 <div class="container">
 
       <div class="blurb">
