--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
     </nav>
 
-<img id="frontPhoto" src="a.jpg"> 
+<img id="frontPhoto" src="a.jpg" style="width: 50%; height: 50%"/> 
 
 <div class="container">
 
@@ -33,6 +33,7 @@
    <ul>
    <li><a href="mailto:hkamdar2@illinois.edu">email</a></li>
    <li><a href="https://github.com/harshilkamdar">github.com/harshilkamdar</a></li>
+    <li><a href="https://twitter.com/harshilkamdar">twitter.com/harshilkamdar</a></li>
    </ul>
   </footer>
   </body>
