--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
       <div class="blurb">
       <p>This is still kinda under construction. </p>
+      <p>But there's a photo of me being cool. Also, CV. </p>
     </div> 
 
 <script>
