--- a/index.html
+++ b/index.html
@@ -1,52 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Harshil Kamdar</title>
-    
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
-  </head>
-
-
-  <body>
-    <nav>
-<ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv"><a href="cv.pdf">CV</a></a></li>
-<li><a href="/blog">Blog</a></li>
-</ul>
-    </nav>
-
-<img id="frontPhoto" src="a.jpg" style="width: 50%; height: 50%"/> 
-
-<div class="container">
-
-      <div class="blurb">
-      <p>This is still kinda under construction. </p>
-      <p>But there's a photo of me being cool. Also, CV. </p>
-    </div> 
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-69684515-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
+---
+layout: default
+title: jmcglone.com
+cv: passive
+notes: passive
+contact: passive
+description: Jonathan McGlone is a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.
+---
+<!-- <div class="jumbotron"> -->
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Jonathan McGlone" src="img/jmcglone-200px.png">
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<p class="lead">Hi, I'm <span itemprop="name">Jonathan McGlone</span> and I make things on the web for academic libraries and scholarly publishers.</p>
+	<p>I get by as a <span itemprop="title">librarian</span>, <span itemprop="title">front end developer</span>, <span itemprop="title">UI designer</span>, <span itemprop="title">digital publisher</span>, <span itemprop="title">managing editor</span> and music enthusiast living in <span itemprop="address" itemscope
+    itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Plymouth</span>, <span itemprop="region">Michigan</span></span> and working for <a href="http://www.publishing.umich.edu">Michigan Publishing</a> at <span itemprop="affiliation">the <a href="http://www.lib.umich.edu">University of Michigan Library</a></span>.</p>
+	
+	<p>I'm also available for hire as a <span itemprop="title">freelance web developer, designer, or consultant</span>. <a href="contact">Drop me a line</a> about your project if you're interested in working with me.</p>
+	</div>
 </div>
-  
-  <footer>
-   <ul>
-   <li><a href="mailto:hkamdar2@illinois.edu">email</a></li>
-   <li><a href="https://github.com/harshilkamdar">github.com/harshilkamdar</a></li>
-    <li><a href="https://twitter.com/harshilkamdar">twitter.com/harshilkamdar</a></li>
-   </ul>
-  </footer>
-  </body>
-
-</html>
+<!-- </div> -->
