--- a/cv/index.html
+++ b/cv/index.html
@@ -7,7 +7,6 @@ projects: passive
 notes: passive
 contact: passive
 ---
-<div class="cv">
-	<a href="/files/cv.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV</a>
+<iframe src="https://drive.google.com/open?id=0B1tL4eGg0iYRNzctMEtJMnczcjA&embedded=true" 
+style="width:600px; height:500px;" frameborder="0"></iframe>
 				
-</div>
