--- a/cv/index.html
+++ b/cv/index.html
@@ -7,6 +7,6 @@ projects: passive
 notes: passive
 contact: passive
 ---
-<iframe src="https://drive.google.com/open?id=0B1tL4eGg0iYRNzctMEtJMnczcjA&embedded=true" 
+<iframe src="http://docs.google.com/gview?url=https://drive.google.com/open?id=0B1tL4eGg0iYRNzctMEtJMnczcjA&embedded=true" 
 style="width:600px; height:500px;" frameborder="0"></iframe>
 				
