--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ contact: passive
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Jonathan McGlone" src="files/derp.jpg" height="200">
+	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="100">
 	</div>
 	<p class="lead">Hi, I'm Harshil. I like science and stuff.</p>
 	</div>
