--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ contact: passive
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="50">
 	</div>
-	<p class="lead">Hi, I'm Harshil. I like science and stuff.</p>
+	<p class="lead">Hi, I'm Harshil. I like science and stuff. Poop. </p>
 	</div>
 </div>
 <!-- </div> -->
