--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ contact: passive
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="50">
+	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="200">
 	</div>
-	<p class="lead">Hi, I'm Harshil. I like science and stuff. Poop. </p>
+	<p class="lead">Hi, I'm Harshil. I like science and stuff.</p>
 	</div>
 </div>
 <!-- </div> -->
