--- a/contact/index.html
+++ b/contact/index.html
@@ -11,8 +11,9 @@ contact: active
 	<p>Contact:</p>
 	
 	<ul class="list-unstyled">
-	<li><a href="http://www.github.com/harshilkamddar">@Github</a></li>
-	<li><a href="http://www.twitter.com/harshilkamddar">@Github</a></li>
+<a href="https://github.com/harshilkamdar" onclick="_gaq.push(['_trackEvent', 'linkTo', 'github', this.href]);"><i class="fa fa-github"></i><span class="link-text">github</span></a>
+	<li><a href="http://www.twitter.com/harshilkamdar">@Twitter</a></li>
+	<li><a href="http://www.twitter.com/harshilkamdar">@Twitter</a></li>
 	</ul>
 
 </div>
