--- a/contact/index.html
+++ b/contact/index.html
@@ -11,9 +11,9 @@ contact: active
 	<p>Contact:</p>
 	
 	<ul class="list-unstyled">
-<a href="https://github.com/harshilkamdar" onclick="_gaq.push(['_trackEvent', 'linkTo', 'github', this.href]);"><i class="fa fa-github"></i><span class="link-text">github</span></a>
+	<li><a href="http://www.github.com/harshilkamdar">@Github</a></li>
 	<li><a href="http://www.twitter.com/harshilkamdar">@Twitter</a></li>
-	<li><a href="http://www.twitter.com/harshilkamdar">@Twitter</a></li>
+	<li><a href="mailto:hkamdar2@illinois.edu">Email</a></li>
 	</ul>
 
 </div>
