--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ contact: passive
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="70">
 	</div>
-	<p class="lead">Hi, I'm Harshil. I do things and like stuff. </p>
+	<p class="lead">Hi, I'm Harshil. I'm a first year graduate student at the Center for Astrophysics at Harvard.</p>
 	</div>
 </div>
 <!-- </div> -->
