--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@ contact: active
 	<ul class="list-unstyled">
 	<li><a href="http://www.github.com/harshilkamdar">@Github</a></li>
 	<li><a href="http://www.twitter.com/harshilkamdar">@Twitter</a></li>
-	<li><a href="mailto:hkamdar2@illinois.edu">Email</a></li>
+	<li><a href="mailto:harshil.kamdar@cfa.harvard.edu">Email</a></li>
 	</ul>
 
 </div>
