--- a/cv/index.html
+++ b/cv/index.html
@@ -10,5 +10,5 @@ contact: passive
 <iframe src="http://docs.google.com/gview?url=http://harshilkamdar.github.io/cv/cv.pdf&embedded=true" 
 style="width:600px; height:500px;" frameborder="0"></iframe>
 <a href="/files/cv.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV</a>
-<a href="/files/cv.zip" class="btn btn-default pull-right" title="Download CV Source (zip)">Download CV</a>
+<a href="/files/cv.zip" class="btn btn-default pull-right" title="Download CV Source (zip)">Download CV Source</a>
 				
