--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ contact: passive
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Harshil Kamdar" src="files/derp.jpg" height="70">
 	</div>
-	<p class="lead">Hi, I'm Harshil. I'm a fifth-year graduate student at the Harvard-Smithsonian Center for Astrophysics.</p>
+		<p class="lead">Hi, I'm Harshil. I'm a fifth-year graduate student at the Harvard University.</p>
 	</div>
 </div>
 <!-- </div> -->
