--- a/404.html
+++ b/404.html
@@ -4,5 +4,5 @@ title: 404 Error | Sorry, this page does not exist.
 --- 
 
 <div class="error">
-        	<h1>You done pooped, son.</h1>
+        	<h1>oop.</h1>
 </div>
